--- a/thesis.tex
+++ b/thesis.tex
@@ -16,14 +16,10 @@
 \section{Introduction}
 	In this paper, we'll explore the efficacy of using targeted keyword search queries to find architectural knowledge in mailing lists for open-source software projects. More simply put, we'll build tools, collect data, and analyze that data to qualitatively determine how effective certain keyword-based search queries are at finding useful information in large sets of emails.
 	
+	It is important to explore different avenues for acquiring knowledge, especially as the body of information grows exponentially with time. It is difficult for developers and software architects to make informed decisions about their own projects, because the source of their knowledge is distributed in a variety of disparate sources. If we can reliably glean information about software architecture and the successful (and unsuccessful) decisions that other field experts have made, we can make this knowledge more accessible for all.
+	
 	\subsection{Background}
-		Test
-		
-		\subsubsection{Other}
-			test!
-
-\section{Background Information}
-	This section contains some background information about what research already exists on this topic, and what knowledge it provides.
+		Do research and include lots of references to other papers on the subject, and what they do, and how they differ from what this paper does.
 
 \section{Research Questions}
 	The main research question that this paper attempts to answer is summarized in the following question:
@@ -50,5 +46,8 @@
 
 \section{Conclusion}
 	This section will answer the research questions and discuss further research.
+
+\newpage
+\printbibliography
 
 \end{document}
