--- a/title-page.tex
+++ b/title-page.tex
@@ -1,3 +1,5 @@
+% This file defines the title page formatting.
+
 \begin{titlepage}
 	\headingfont
 	\begin{center}
@@ -10,9 +12,11 @@
 		
 		\vspace{2cm}
 		
-		\textbf{Andrew Lalis} \\
-		\normalsize
-		\textbf{Supervised by Mohamed Soliman}
+		\begin{tabular}{l r}
+			\Large \textbf{Andrew Lalis} & \footnotesize\href{mailto:andrewlalisofficial@gmail.com}{andrewlalisofficial@gmail.com} \\
+			\footnotesize Supervised by \normalsize\textbf{Dr. Mohamed Soliman} & \footnotesize\href{mailto:m.a.m.soliman@rug.nl}{m.a.m.soliman@rug.nl}
+		\end{tabular}
+		
 		
 		\vspace{1cm}
 		
@@ -21,7 +25,7 @@
 		\today
 		
 		\vfill
-		
+				
 		\includegraphics[width=\textwidth]{img/rug_fse_logo.png}
 	\end{center}
 
