--- a/thesis.tex
+++ b/thesis.tex
@@ -14,12 +14,12 @@
 \input{table-of-contents.tex}
 
 \section{Introduction}
-	In this paper, we'll explore the efficacy of using targeted keyword search queries to find architectural knowledge in mailing lists for open-source software projects. More simply put, we'll build tools, collect data, and analyze that data to qualitatively determine how effective certain keyword-based search queries are at finding useful information in large sets of emails.
+	In this paper, we'll explore the efficacy of using targeted keyword search queries to find architectural knowledge in mailing lists for open-source software projects. More simply put, we'll build tools, collect data, and analyze that data to qualitatively determine how effective certain keyword-based search queries are at finding useful information in large sets of emails, sent in mailing lists for developers to communicate about large open-source software projects.
 	
 	It is important to explore different avenues for acquiring knowledge, especially as the body of information grows exponentially with time. It is difficult for developers and software architects to make informed decisions about their own projects, because the source of their knowledge is distributed in a variety of disparate sources. If we can reliably glean information about software architecture and the successful (and unsuccessful) decisions that other field experts have made, we can make this knowledge more accessible for all.
 	
-	\subsection{Background}
-		Do research and include lots of references to other papers on the subject, and what they do, and how they differ from what this paper does.
+\section{Related Work}
+	This section will contain an overview of lots of different sources and what they've done, and how what I'm doing is different.
 
 \section{Research Questions}
 	The main research question that this paper attempts to answer is summarized in the following question:
@@ -47,7 +47,10 @@
 \section{Conclusion}
 	This section will answer the research questions and discuss further research.
 
-\newpage
-\printbibliography
+\section{References}
+\printbibliography[heading=none]
+
+\section{Appendix}
+	This section will contain larger bits of text or code or figures that aren't well suited to being placed inside the body of the paper.
 
 \end{document}
