--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \input{title-page.tex}
 
 \section{Abstract}
-	This section will contain a brief overview of the research and conclusions.
+	This section will contain a brief overview of the research and conclusions. Test
 
 \input{table-of-contents.tex}
 
@@ -17,6 +17,8 @@
 	In this paper, we'll explore the efficacy of using targeted keyword search queries to find architectural knowledge in mailing lists for open-source software projects. More simply put, we'll build tools, collect data, and analyze that data to qualitatively determine how effective certain keyword-based search queries are at finding useful information in large sets of emails, sent in mailing lists for developers to communicate about large open-source software projects.
 	
 	It is important to explore different avenues for acquiring knowledge, especially as the body of information grows exponentially with time. It is difficult for developers and software architects to make informed decisions about their own projects, because the source of their knowledge is distributed in a variety of disparate sources. If we can reliably glean information about software architecture and the successful (and unsuccessful) decisions that other field experts have made, we can make this knowledge more accessible for all.
+	
+	For the purposes of this research, we will focus on analyzing the contents of mailing lists from three major open-source projects from the Apache Software Foundation: \href{https://hadoop.apache.org/}{Hadoop}, \href{https://cassandra.apache.org}{Cassandra}, and \href{https://attic.apache.org/projects/tajo.html}{Tajo}. Mailing list data will be obtained from \href{https://lists.apache.org/}{lists.apache.org}, and this data will be indexed and searched over using \href{https://lucene.apache.org/}{Apache Lucene}. We will categorize a subset of emails from these mailing lists, based on the type of architectural design decisions they contain, in order to conjecture about the efficacy of searching.
 	
 \section{Related Work}
 	This section will contain an overview of lots of different sources and what they've done, and how what I'm doing is different.
@@ -39,7 +41,7 @@
 	\end{enumerate}
 
 \section{Methodology}
-	This section will explain the process that was followed to obtain data.
+	This section will provide a detailed overview of how our data was obtained, and how one can replicate it.
 
 \section{Results}
 	This section will show visualizations and aggregate data for results.
@@ -48,7 +50,7 @@
 	This section will answer the research questions and discuss further research.
 
 \section{References}
-\printbibliography[heading=none]
+	\printbibliography[heading=none]
 
 \section{Appendix}
 	This section will contain larger bits of text or code or figures that aren't well suited to being placed inside the body of the paper.
