--- a/sources.bib
+++ b/sources.bib
@@ -4,6 +4,8 @@
 	institution = {University of British Columbia and Vrije Universiteit Amsterdam},
 	journal = {Quality of Software Architectures},
 	date = {December 2006},
+	year = {2006},
+	month = {12},
 	doi = {10.1007/11921998_8},
 	pages = {43-58}
 }
@@ -14,6 +16,58 @@
 	journal = {University of Groningen Student Theses},
 	institution = {University of Groningen},
 	date = {August 2021},
+	year = {2021},
 	url = {https://fse.studenttheses.ub.rug.nl/25813/},
 	pages = {3-30}
+}
+@article{perry,
+	author = {Dewayne E. Perry and Alexander L. Wolf},
+	title = {Foundations for the Study of Software Architecture},
+	journaltitle = {ACM SIGSOFT Software Engineering Notes},
+	date = {October 1992},
+	volume = {17},
+	issue = {4},
+	pages = {40-52},
+	doi = {10.1.1.40.5174},
+	url = {http://users.ece.utexas.edu/~perry/work/papers/swa-sen.pdf}
+}
+@article{jansen,
+	author = {Anto Jansen and Jan van der Ven and Paris Avgeriou and Dieter K. Hammer},
+	title = {Software Architecture as a Set of Architectural Design Decisions},
+	doi = {10.1109/WICSA.2005.61},
+	year = {2005},
+	month = {01},
+	pages = {109-120},
+	volume = {2005},
+	journal = {Proceedings - 5th Working IEEE/IFIP Conference on Software Architecture, WICSA 2005}
+}
+@article{randell,
+	author = {Peter Naur and Brian Randell},
+	title = {Software Engineering: Report on a conference sponsored by the NATO Science Committee},
+	date = {January 1969},
+	year = {1969},
+	institution = {NATO, Scientific Affairs Division},
+	journal = {Working Conference on Software Engineering}
+}
+@article{garlan,
+	author = {David Garlan and Mary Shaw},
+	title = {An Introduction to Software Architecture},
+	date = {January 1994},
+	url = {https://www.cs.cmu.edu/afs/cs/project/able/ftp/intro_softarch/intro_softarch.pdf}
+}
+@manual{mailinglistrfc,
+	author = {R. Gellens},
+	title = {Mailing Lists and Internationalized Email Addresses},
+	date = {October 2010},
+	year = {2010},
+	month = {10},
+	organization = {Internet Engineering Task Force (IETF)},
+}
+@article{akhtar,
+	author = {Aleem Akhtar},
+	title = {Role of Apache Software Foundation in Big Data Projects},
+	journal = {arXiv e-prints},
+	year = {2020},
+	month = {05},
+	doi = {10.48550/arXiv.2005.02829}
 }
