Finished first draft.

--- a/sources.bib
+++ b/sources.bib
@@ -41,6 +41,13 @@
 	volume = {2005},
 	journal = {Proceedings - 5th Working IEEE/IFIP Conference on Software Architecture, WICSA 2005}
 }
+@article{tang,
+	author = {Antony Tang and Paris Avgeriou and Anto Jansen and Rafael Capilla and Muhammad Ali Babar},
+	title = {A comparative study of architecture knowledge management tools},
+	year = {2008},
+	month = {07},
+	journal = {The Journal of Systems and Software}
+}
 @article{randell,
 	author = {Peter Naur and Brian Randell},
 	title = {Software Engineering: Report on a conference sponsored by the NATO Science Committee},
@@ -90,4 +97,110 @@
  	journal={Apache Lucene},
  	publisher={Apache Software Foundation}
  }
+@article{faroghi,
+	author = {Said Faroghi},
+	title = {Mining architectural knowledge in issue tracking systems},
+	journal = {University of Groningen Student Theses},
+	institution = {University of Groningen},
+	date = {February 2022},
+	year = {2022},
+	month = {2},
+	url = {https://fse.studenttheses.ub.rug.nl/26603/}
+}
+@article{soliman,
+	author = {Mohamed Soliman and Marion Wiese and Yikun Li and Matthias Riebisch and Paris Avgeriou},
+	title = {Exploring Web Search Engines to Find Architectural Knowledge},
+	journal = {Proceedings - IEEE 18th International Conference on Software Architecture,
+	ICSA 2021},
+	doi = {10.1109/ICSA51549.2021.00023},
+	pages = {162-172},
+	url = {https://doi.org/10.1109/ICSA51549.2021.00023}
+}
+@article{xiong,
+	title = {Assumptions in OSS Development: An Exploratory Study through the Hibernate Developer Mailing List},
+	author = {Zhuang Xiong and Peng Liang and Chen Yang and Tianqing Liu},
+	journal = {25th Asia-Pacific Software Engineering Conference (APSEC)},
+	doi = {10.1109/APSEC.2018.00060},
+	year = {2018},
+	month = {12}
+}
+@article{ding,
+	title = {Understanding the Causes of Architecture Changes Using OSS Mailing Lists},
+	author = {Wei Ding and Peng Liang and Antony Tang and Hans van Vliet},
+	journal = {International Journal of Software Engineering and Knowledge Engineering},
+	year = {2015},
+	pages = {1633-1651}
+}
+@InProceedings{bhat,
+	author="Bhat, Manoj
+	and Shumaiev, Klym
+	and Biesdorf, Andreas
+	and Hohenstein, Uwe
+	and Matthes, Florian",
+	editor="Lopes, Ant{\'o}nia
+	and de Lemos, Rog{\'e}rio",
+	title="Automatic Extraction of Design Decisions from Issue Management Systems: A Machine Learning Based Approach",
+	booktitle="Software Architecture",
+	year="2017",
+	publisher="Springer International Publishing",
+	pages="138--154",
+	isbn="978-3-319-65831-5"
+}
+@article{bright,
+	author = {Bright, Walter and Alexandrescu, Andrei and Parker, Michael},
+	title = {Origins of the D Programming Language},
+	year = {2020},
+	issue_date = {June 2020},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {4},
+	number = {HOPL},
+	url = {https://doi.org/10.1145/3386323},
+	doi = {10.1145/3386323},
+	journal = {Proc. ACM Program. Lang.},
+	month = {jun},
+	articleno = {73},
+	numpages = {38},
+	keywords = {Programming Languages}
+}
+@article{jarvelin,
+	author = {J\"{a}rvelin, Kalervo and Kek\"{a}l\"{a}inen, Jaana},
+	title = {Cumulated Gain-Based Evaluation of IR Techniques},
+	year = {2002},
+	issue_date = {October 2002},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {20},
+	number = {4},
+	issn = {1046-8188},
+	url = {https://doi.org/10.1145/582415.582418},
+	doi = {10.1145/582415.582418},
+	journal = {ACM Trans. Inf. Syst.},
+	month = {oct},
+	pages = {422–446},
+	numpages = {25},
+	keywords = {cumulated gain, Graded relevance judgments}
+}
+@misc{stanfordslides,
+	url = {https://web.stanford.edu/class/cs276/handouts/EvaluationNew-handout-6-per.pdf},
+	title = {Introduction to Information Retrieval},
+	year = {2013},
+	month = {04}
+}
+@article{guthrie,
+	title = {A Closer Look at Skip-gram Modelling},
+	author = {David Guthrie and Ben Allison and Wei Lu and Louise Guthrie and Yorick Wilks},
+	institution = {University of Sheffield},
+	year = {2006},
+	url = {https://web.archive.org/web/20170517144625/http://homepages.inf.ed.ac.uk/ballison/pdf/lrec_skipgrams.pdf}
+}
+@article{google-ngram,
+	title = {All Our N-gram are Belong to You},
+	author = {Alex Franz and Thorsten Brants},
+	journal = {Google AI Blog},
+	institution = {Google Research},
+	year = {2006},
+	month = {8},
+	url = {https://ai.googleblog.com/2006/08/all-our-n-gram-are-belong-to-you.html}
+}
 
