--- a/setup.tex
+++ b/setup.tex
@@ -37,6 +37,7 @@
 
 % Code settings
 \usepackage{minted}
+\usepackage[htt]{hyphenat}
 
 % Note: For some reason, this patch is needed to allow minted to work with python3, since it just looks for "python" by default.
 \usepackage{xpatch}
