--- a/sources.bib
+++ b/sources.bib
@@ -203,4 +203,10 @@
 	month = {8},
 	url = {https://ai.googleblog.com/2006/08/all-our-n-gram-are-belong-to-you.html}
 }
+@article{francis,
+	title = {Frequency Analysis of English Usage: Lexicon and Usage},
+	author = {W.N. Francis and H. Kučera},
+	year = {1982},
+	journal = {Oxford University Press}
+}
 
