Removed 5th research question.

--- a/thesis.tex
+++ b/thesis.tex
@@ -94,7 +94,7 @@
 			\item How often do architectural design decisions appear in mailing lists?
 			\item What patterns exist in the order in which architectural design decisions appear? Furthermore, why do such patterns, if any, exist?
 			\item How effective is using Apache Lucene to index and search for architectural design decisions in mailing lists?
-			\item How can we use data gathered in this research to improve our search queries?
+			% \item How can we use data gathered in this research to improve our search queries?
 		\end{enumerate}
 	
 \section{Related Work}
